--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.13.1",
     "react-scripts": "4.0.1",
     "semantic": "0.0.1",
     "semantic-ui-css": "^2.4.1",
